# Python-Modules

./: LICENSE  README.md
Module_00/: README.md
Module_00/ex0/: ft_hello_garden.py
Module_00/ex1/: ft_plot_area.py
Module_00/ex2/: ft_harvest_total.py
Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module_01/ex0/: ft_garden_intro.py
Module_01/ex1/: ft_garden_data.py
Module_01/ex2/: ft_plant_growth.py
Module_01/ex4/: ft_garden_security.py
Module_01/ex5/: ft_plant_types.py
Module_02/ex0/: ft_first_exception.py
Module_02/ex3/: ft_finally_block.py
Module_03/ex1/: ft_score_analytics.py
Module_03/ex2/: ft_coordinate_system.py
Module_03/ex4/: ft_inventory_system.py
Module_04/: .gitignore
Module_05/: .gitignore
Module_05/ex1/: data_stream.py
Module_05/ex2/: nexus_pipeline.py
Module_06/: .gitignore  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py
Module_07/: .gitignore
Module_07/ex0/: Card.py  CreatureCard.py  main.py
Module_07/ex1/: ArtifactCard.py  SpellCard.py  main.py
Module_07/ex2/: EliteCard.py  main.py
Module_08/: .gitignore
PythonModule00/: README.md
PythonModule01/: README.md
PythonModule02/: README.md
PythonModule03/: README.md
PythonModule04/: README.md  create_file.py
PythonModule05/: README.md
PythonModule06/: README.md  ft_sacred_scroll.py
PythonModule07/: README.md
PythonModule08/: README.md
PythonModule08/ex1/: pyproject.toml  requirements.txt
PythonModule09/: README.md
PythonModule10/: README.md
ex0/: space_station.py
ex1/: alien_contact.py
(+66 files in other folders)
