[project]
name = "ex1"
version = "0.1.0"
description = "a discovery of poetry package install"
authors = [
    npillet
]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)"
    "requests (>=2.31.0,<3.0.0)"
    "matplotlib (>=3.7.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
